2008-01-17  Neal H. Walfield  <neal@gnu.org>

	* .cvsignore: New file.
	* ChangeLog: New file mentioning itself.
	* Makefile.am: New file.
	* README: Likewise.
	* addon: New directory.
	* patches: Likewise.