@@ -1,5 +1,12 @@
 2008-01-17  Neal H. Walfield  <neal@gnu.org>
 
+	* Makefile.am (clean-local): New rule.
+	(distclean-local): Likewise.
+	(CLEANFILES): New variable.
+	(DISTCLEANFILES): Likewise.
+
+2008-01-17  Neal H. Walfield  <neal@gnu.org>
+
 	* .cvsignore: New file.
 	* ChangeLog: New file mentioning itself.
 	* Makefile.am: New file.
